syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "ChannelDescriptorType";

import "sdc/biceps/abstractdevicecomponentdescriptor.proto";
import "sdc/biceps/abstractmetricdescriptoroneof.proto";

message ChannelDescriptor {
  AbstractDeviceComponentDescriptor abstract_device_component_descriptor = 1;
  AbstractMetricDescriptorOneOf metric = 2;
}
