syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "MdsOperatingModeProto";


message MdsOperatingModeMsg {
  enum EnumType {
    NML = 0;
    DMO = 1;
    SRV = 2;
    MTN = 3;
  }
  EnumType enum_value = 1;
}
