syntax = "proto3";

package sdc.biceps;

option java_multiple_files = true;
option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "MetricCategoryProto";


message MetricCategoryMsg {
  enum EnumType {
    UNSPEC = 0;
    MSRMT = 1;
    CLC = 2;
    SET = 3;
    PRESET = 4;
    RCMM = 5;
  }
  EnumType enum_value = 1;
}
